Rback, jwt, icrad, notification enhancement